Fix header visible

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -149,5 +149,8 @@
       font-weight: 600;
       font-size: 16px;
     }
+    @media screen and (max-width: 696px) {
+      margin: 20px 0;
+    }
   }
 }
