--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -11,6 +11,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @media screen and (max-width: 696px) {
+      flex-direction: column;
+    }
   }
 
   &__logo {
